src/actors/snapshots/tests__actors::symbolication::tests::test_add_bucket-2.snap
---
created: "2019-06-14T11:25:20.322175Z"
creator: insta@0.8.1
source: src/actors/symbolication.rs
expression: response
---
status: completed
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        lang: c
        symbol: main
        sym_addr: 0x100000fa0
        function: main
        filename: hello.c
        abs_path: /tmp/hello.c
        lineno: 1
        instruction_addr: 0x100000fa0
modules:
  - debug_status: found
    arch: x86_64
    type: macho
    code_id: 502fc0a51ec13e479998684fa139dca7
    debug_id: 502fc0a5-1ec1-3e47-9998-684fa139dca7
    image_addr: 0x100000000
    image_size: 4096
