src/actors/snapshots/tests__actors::symbolication::tests::test_minidump_macos-2.snap
---
created: "2019-06-28T09:52:52.193621Z"
creator: insta@0.8.1
source: src/actors/symbolication.rs
expression: "fs::read_dir(state.config.cache_dir.as_ref().unwrap().join(\"object_meta/global/\")).unwrap().map(|x|\n                                                                                                    x.unwrap().file_name().into_string().unwrap()).collect::<Vec<_>>()"
---
- local_9B2A_C56D_107C_3541_A127_9094A751F2C9_app
- local_crash_67E9247C814E392BA027DBDE6748FCBF0_crash_sym
- local_67E9_247C_814E_392B_A027_DBDE6748FCBF_app
- local_libdyld_dylib_9B2AC56D107C3541A1279094A751F2C90_libdyld_dylib_sym
- local_9B2A_C56D_107C_3541_A127_9094A751F2C9
- local_67E9_247C_814E_392B_A027_DBDE6748FCBF
