src/actors/snapshots/tests__actors::symbolication::tests::test_minidump_windows-2.snap
---
created: "2019-06-28T09:52:52.279925Z"
creator: insta@0.8.1
source: src/actors/symbolication.rs
expression: "fs::read_dir(state.config.cache_dir.as_ref().unwrap().join(\"object_meta/global/\")).unwrap().map(|x|\n                                                                                                    x.unwrap().file_name().into_string().unwrap()).collect::<Vec<_>>()"
---
- local_wntdll_pdb_971F98E5CE6041FFB2D7235BBEB345781_wntdll_pd_
- local_rpcrt4_dll_5A49BB75c1000_rpcrt4_dl_
- local_kernel32_dll_590285E9e0000_kernel32_dl_
- local_wkernel32_pdb_D347455996F747D6BF43C176B2171E681_wkernel32_pdb
- local_crash_exe_5AB380779000_crash_exe
- local_crash_pdb_3249D99D0C4049318610F4E4FB0B69361_crash_sym
- local_ntdll_dll_59B0D8F3183000_ntdll_dl_
- local_wrpcrt4_pdb_AE131C6727A74FA19916B5A4AEF411901_wrpcrt4_sym
- local_crash_pdb_3249D99D0C4049318610F4E4FB0B69361_crash_pd_
- local_dbgcore_pdb_AEC7EF2FDF4B4642A4714C3E5FE8760A1_dbgcore_pdb
- local_dbgcore_dll_57898DAB25000_dbgcore_dll
- local_wrpcrt4_pdb_AE131C6727A74FA19916B5A4AEF411901_wrpcrt4_pd_
- local_wntdll_pdb_971F98E5CE6041FFB2D7235BBEB345781_wntdll_sym
- local_wntdll_pdb_971F98E5CE6041FFB2D7235BBEB345781_wntdll_pdb
- local_rpcrt4_dll_5A49BB75c1000_rpcrt4_dll
- local_kernel32_dll_590285E9e0000_kernel32_dll
- local_crash_exe_5AB380779000_crash_ex_
- local_wkernel32_pdb_D347455996F747D6BF43C176B2171E681_wkernel32_pd_
- local_dbgcore_pdb_AEC7EF2FDF4B4642A4714C3E5FE8760A1_dbgcore_sym
- local_ntdll_dll_59B0D8F3183000_ntdll_dll
- local_crash_pdb_3249D99D0C4049318610F4E4FB0B69361_crash_pdb
- local_dbgcore_pdb_AEC7EF2FDF4B4642A4714C3E5FE8760A1_dbgcore_pd_
- local_wrpcrt4_pdb_AE131C6727A74FA19916B5A4AEF411901_wrpcrt4_pdb
- local_dbgcore_dll_57898DAB25000_dbgcore_dl_
- local_wkernel32_pdb_D347455996F747D6BF43C176B2171E681_wkernel32_sym
