src/actors/snapshots/tests__add_bucket-2.snap
---
created: "2019-08-02T18:48:40.068288100Z"
creator: insta@0.10.0
source: src/actors/symbolication.rs
expression: response
---
status: completed
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        instruction_addr: 0x100000fa0
        lang: c
        symbol: main
        sym_addr: 0x100000fa0
        function: main
        filename: hello.c
        abs_path: /tmp/hello.c
        lineno: 1
modules:
  - debug_status: found
    arch: x86_64
    type: macho
    code_id: 502fc0a51ec13e479998684fa139dca7
    debug_id: 502fc0a5-1ec1-3e47-9998-684fa139dca7
    image_addr: 0x100000000
    image_size: 4096
